# file-list-rs

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  NProdiver.vue  Prodiver.vue  auto-imports.d.ts  components.d.ts  global.d.ts  main.ts  rust.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  dir.rs  dir_s_parse.rs  file.rs  history.rs  i18n.rs  kv.rs  kv_parse.rs  ls_alhr_parse.rs  main.rs  mem_parse.rs  os.rs  parse.rs  utils.rs
src-tauri/test/: ja-bug-1.txt  ja-dir-s-list.txt  list.txt  ls-alhr-dist.txt  path_match.txt  tree-f.txt
src/components/FileList/: index.vue
src/components/FileSelectorForm/: index.vue
src/components/FileTreeFinderForm/: index.vue
src/components/ParseRecords/: index.vue
src/components/ThemeSwitch/: index.vue
src/store/: index.ts
src/store/modules/: index.ts
src/store/modules/app/: index.ts
src/store/modules/current-record/: index.ts
src/store/modules/dir-view/: index.ts
src/utils/common/: common.js  index.js  is.js  naiveTools.js
src/views/DirView/: dir-s-columns.ts  index.vue  ls-alhr-columns.ts  types.ts
src/views/FileTree/: index.vue  states.ts
src/views/FileTreeKv/: index.vue  states.ts
src/views/FileTreeMem/: index.vue  states.ts
src/views/main/: index.vue  states.ts
